css/style.css
/*! HTML5 Boilerplate v9.0.1 | MIT License | https://html5boilerplate.com/ */

/* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visually-hidden {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .visually-hidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visually-hidden.focusable:active,
.visually-hidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * The use of `table` rather than `block` is only necessary if using
 * `::before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
  content: "";
  display: table;
}

.clearfix::after {
  clear: both;
}

body {
  margin: 0px;

  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.header {
  background-color: #091300;
  color:#ffffff;
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 30px;
}

.header p{
  float:left;
  margin: 0px;
  padding: 0px;
}

.byRuninho{
  color: rgba(193, 193, 193, 0.87);
  font-size: 14px;
}

.centerContainer{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 20px;
  padding-right: 20px;
}

.centerContent{
  max-width: 800px;
  width: 100%;
}

.openerGrid{
  display: flex;
  flex-wrap: wrap;
}

.featureGrid{
  display: flex;
  flex-wrap: wrap;
}

.featureCard{
  flex: 1 1 200px;
  padding: 10px;
}

.featureCard{
  text-align: center;
}

.featureCard h2{
  margin-bottom: 5px;
}

.featureIcon{
  width: 50px;
  height: 50px;
  padding: 15px;
  background: #3ba461;
  fill: #ffffff;
  border-radius: 10px;
}

.flexHalf{
  margin-top: 50px;
  flex: 1 1 300px;
}

.splash{
  width: 100%;
  margin: 20px 20px 20px 20px;
  box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
}

#versionID{
  font-size: 12px;
  padding: 0px;
  margin-top: 5px;
  color: #e9f6da;
}

h1{
  font-size: 2.2em;
}

.opener {
  background: rgb(17,153,122);
  background: linear-gradient(167deg, rgba(17,153,122,1) 0%, rgba(213,207,12,1) 100%);
  color: #ffffff;
}

.reviews{
  background: #eef3e4;
  padding-bottom: 20px;
}
.reviewCard{
  padding: 20px;
  flex: 1 1 200px;
  background: #ffffff;
  margin: 10px;
}

.tutorial{
  padding-bottom: 30px;
}
.openSource{
  padding-bottom: 30px;
}

.viewOnGithub{
  float: right;
  font-size: 18px;
  color: #ffffff;
}

.viewOnGithub a{
  text-decoration: none;
}

button {
  background: linear-gradient(to right, #06a0ff 50%, #2b74ff 100%);
  background-size: 200%;
  background-position: right 0;
  transition: background-position 300ms ease-in;
  border: none;
  color: white;
  padding: 15px 30px;
  cursor: pointer;
  font-size: 20px;
}

.footer{
  background-color: #363a31;
  color:white;
}

.footer a{
  color: white;
}

/* Darker background on mouse-over */
button:hover {
  background-position: 0 0;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}

@media print,
  (-webkit-min-device-pixel-ratio: 1.25),
  (min-resolution: 1.25dppx),
  (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
  *,
  *::before,
  *::after {
    background: #fff !important;
    color: #000 !important;
    /* Black prints faster */
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a,
  a:visited {
    text-decoration: underline;
  }

  a[href]::after {
    content: " (" attr(href) ")";
  }

  abbr[title]::after {
    content: " (" attr(title) ")";
  }

  /*
   * Don't show links that are fragment identifiers,
   * or use the `javascript:` pseudo protocol
   */
  a[href^="#"]::after,
  a[href^="javascript:"]::after {
    content: "";
  }

  pre {
    white-space: pre-wrap !important;
  }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  tr,
  img {
    page-break-inside: avoid;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3 {
    page-break-after: avoid;
  }
}

